--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Bayu Aji Nugroho",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
